--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,32 +1,30 @@
 ## Projects
 
 <ProjectCard
-  title="Tips & Tricks for Gatsby"
-  link="https://www.lekoarts.de/gatsby/tips-and-tricks-for-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Tic-Tac-Toe"
+  link="https://joeygarber.github.io/Joey-Garber-Tic-Tac-Toe-Client/"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A collection of short, but useful quick tips shared by me and the community
-  about Gatsby. From GraphQL over local development to deployment.
+  A tic-tac-toe game programmed in JavaScript, using JavaScript, JQuery, HTML, CSS, and Bootstrap.
 </ProjectCard>
 <ProjectCard
-  title="Setting  up a yarn Workspace"
-  link="https://www.lekoarts.de/javascript/setting-up-a-yarn-workspace-with-typescript-eslint-and-cypress?utm_source=cara&utm_medium=Theme"
+  title="Wingtracker"
+  link="https://joeygarber.github.io/WingTracker-Client/"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A robust solution for multi-package repositories.
+  An app to keep track of your hot wing opinions! Programmed with JavaScript, jQuery, Express.js, MongoDB, Mongoose, SCSS, Bootstrap, and HTML.
 </ProjectCard>
 <ProjectCard
-  title="Adding a Draft Feature to Gatsby"
-  link="https://www.lekoarts.de/garden/adding-a-draft-feature-to-gatsby?utm_source=cara&utm_medium=Theme"
+  title="GSD-Task-Force"
+  link="https://gsd-task-force.github.io/GSD-Task-Force-client/"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-  A solution with the createSchemaCustomization API.
+  A task-tracker app programmed with JavaScript, Express.js, React, MongoDb, and Mongoose, featuring a dynamic search bar and a dropdown menu to filter completed tasks.
 </ProjectCard>
 <ProjectCard
-  title="Theme UI Plugin for Figma"
-  link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
+  title="Good/Bad"
+  link="https://joeygarber.github.io/GoodBad-Client/"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-  The Theme UI plugin for Figma allows for a workflow where Theme UI is the
-  starting point both for design & development.
+  A polling about whether things are good or bad - which hopefully makes users think harder about dichotomy. Programmed with JavaScript, React.js, Express.js, MongoDb, and Mongoose. 
 </ProjectCard>
