--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,11 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+Coding is an absolute pleasure, and I feel so lucky to have the opportunity to pursue it for a living. I'm a junior developer right now, but I have a strong foundation, a high ceiling, a hunger to improve, and 10+ years of experience Googling answers to my questions. I'm creative, I welcome feedback, and I pride myself on being a reliable, flexible teammate.
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+Languages: JavaScript, Python, HTML, SCSS
+Frameworks / libraries: Express, Flask, jQuery, Mongoose, React, SASS, Bootstrap, Django
+Databases: SQL, MongoDB
+OS: MacOS, Windows
+Other Software: Git, GitHub, Microsoft Excel, Google Sheets
+
+[Full Resume](https://docs.google.com/document/d/18p7Az8N94h3-B4P1F5cMZa3hr3svYTSKOPCWm8Cq8M0/edit?usp=sharing)
