--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-Visit [my website](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) or find me on other platforms: [Twitter](https://www.twitter.com/lekoarts_de) & [LinkedIn](https://www.linkedin.com/in/lennart-joergens/)
+Feel free to shoot me an email at joseph.z.garber@gmail.com, or visit [my LinkedIn](https://www.linkedin.com/in/joeygarber/) or [GitHub](https://github.com/JoeyGarber/). 
